# flightctl

./: Cargo.toml  README.md  makefile
.github/workflows/: build.yml  release.yml
src/: commands.rs  config.rs  flightctl.rs  main.rs  selector.rs
src/commands/: aws.rs  config.rs  console.rs  kubectl.rs  process.rs  view.rs
src/flightctl/: authorize.rs  aws.rs  config.rs  context.rs  kubeclient.rs  kubeconfig.rs  kubeconfig_writer.rs  kubectl.rs  kubeenv.rs  selection.rs  selector.rs
templates/: flightctl.sh  flightctl.yaml
