[package]
name = "flightctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube = { version = "0.65.0", default-features = false, features = ["config"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
tempfile = "3.2"
