[package]
name = "flightctl"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
env_logger = "0.9.0"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_24"] }
kube = { version = "0.78.0", default-features = false, features = ["config"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
tempfile = "3.2"
